[package]
name = "meower"
description = "helps you generate your meow maow mrrrp nya"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
